# minimal-web-browser

./: .gitignore  README.md  pyproject.toml
eval/: count_gaia_filtered.py  gaia-direct-gpt-with-search.py  gaia-direct-gpt.py  gaia-direct.py  gaia-gpt-with-thinking.py  gaia.py  recompute_filtered_metrics.py
examples/: exa_example.py  qwen3.py
src/minimal_web_browser_env/: __init__.py  backend.py  browser.py  cli.py  env.py
tests/: test_env.py
